--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <div class="main-container min-vh-100">
       <div class="login-card">
         <div class="card shadow-lg">
           <div class="card-body p-5">
-            <h3 class="card-title text-center mb-4">Welcome Back</h3>
+            <h3 class="card-title text-center mb-4">Welcome Back, KC</h3>
             <form id="loginForm">
               <div class="mb-4">
                 <label for="login-email" class="form-label"
@@ -49,16 +53,11 @@
         </div>
       </div>
     </div>
-    <!-- Remove or comment out the coordinates div -->
-    <!-- <div class="position-fixed bottom-0 end-0 p-3 coordinates">
-      <span id="XC"></span>
-      <span id="YC"></span>
-      <span id="DIS"></span>
-    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/your-code.js"></script>
-    <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="app.js?v2"></script>
   </body>
 </html>
